k8s/overwatch/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.localdev`)
      kind: Rule
      services:
        - name: grafana # This is the name of the Grafana service
          port: 3000 # The Grafana service listens on port 3000
